# PythonListingBackend

./: .env-example  README.md  docker-compose.yml  script.py  start.sh
auth_service/: .env-example  Dockerfile  alembic.ini  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: auth.py
auth_service/app/commands/: create_superuser.py
auth_service/app/core/: config.py
auth_service/app/db/: database.py
auth_service/app/models/: auth.py
auth_service/app/schemas/: token.py  user.py
auth_service/app/services/: auth.py
auth_service/migrations/: env.py
auth_service/migrations/versions/: 158b3e24806f_auth.py
auth_service/tests/: conftest.py  test_auth_endpoints.py  test_auth_services.py
gateway/: .env-example  Dockerfile  config.py  main.py
listing_service/: .env-example  Dockerfile  alembic.ini  pyproject.toml  start_listing_service.py
listing_service/app/: main.py  user_rabbitmq_consumer.py
listing_service/app/api/: cars.py  listings.py  permissions.py  profanity_words.py  regions.py  role_permissions.py  roles.py  users.py
listing_service/app/core/: config.py  redis.py
listing_service/app/db/: database.py
listing_service/app/models/: __init__.py  car.py  exchange_rate.py  listing.py  profanity_words.py  region.py  statistic_for_premium.py  user.py
listing_service/app/schemas/: additional_request.py  car.py  exchange_rate.py  listing.py  permission.py  profanity_word.py  region.py  role.py  role_permission.py  user.py
listing_service/app/services/: admin_notification_event.py  listing.py  permissions_checker.py  user_manager.py
listing_service/app/utils/: additional_checker.py  create_price_uah.py  profanity_filter.py  storage.py  token_utils.py
listing_service/migrations/: env.py
listing_service/migrations/versions/: 6794b882fd5e_listing.py
listing_service/tests/: conftest.py  test_listing_api-permissions.py  test_listing_api-roles.py  test_listing_api_cars.py  test_listing_api_listings.py  test_listing_api_profanity_words.py  test_listing_api_regions.py  test_listing_api_role_permissions.py  test_listing_api_users.py  test_listing_services.py  test_listing_utils.py  test_redis.py
scripts/: gen_shared_env.py
shared/: pyproject.toml
shared/shared/: config.py
shared/shared/utils/: __init__.py  constants.py  logging.py  rabbitmq.py
task_service/: .env-example  Dockerfile  celerybeat-schedule  pyproject.toml  task_startup.py
task_service/app/: bot_mails_consumer.py  celery_app.py  config.py  email_consumer.py  python_ria_bot.py  run_on_startup.py  tasks.py
task_service/app/schemas/: bot_task_data.py
task_service/app/utils/: additional_check_or_create.py  handle_bot_events.py
task_service/templates/: base.html  register.html  restore_pass.html
task_service/tests/: conftest.py  test_celery_app.py  test_task_utils.py
