[tool.poetry]
name = "shared"
version = "1.0.0"
description = "Shared schemas and utilities for microservices"
authors = ["LonerLykos <loner.lykos.project@gmail.com>"]
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.11.5"
structlog = "^25.4.0"
aio-pika = "^9.5.5"
pydantic-settings = "^2.9.1"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
