[tool.poetry]
name = "task_service"
version = "0.1.0"
description = "Celery manager for tasks"
authors = ["LonerLykos <loner.lykos.project@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
shared = {path = "../shared", develop = false}
celery = "^5.5.3"
aiosmtplib = "^4.0.1"
sqlalchemy = "^2.0.41"
asyncmy = "^0.2.10"
jinja2 = "^3.1.6"
aiogram = "^3.21.0"
motor = "^3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
